[project]
name = "passme"
version = "1.2.3"
description = "Password management with command line"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Katsutoshi Seki"}
]
dependencies = [
    'ConfigObj',
    'clipboard',
    'setuptools'
]
requires-python = ">=3.6"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: End Users/Desktop',
    'Topic :: Security',
    'Topic :: Security :: Cryptography',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: OS Independent',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: Linux',
    'Natural Language :: English',
]

[project.urls]
Homepage = "https://github.com/sekika/passme/blob/master/doc/README.rst"
Source = "https://github.com/sekika/passme"

[build-system]
requires = ["setuptools>=67.6.1", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
passme = "passme.main:main"

[tool.setuptools_scm]
